--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Ireland -- Social life and customs -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: "Going to Maynooth\r\nTraits and Stories of the Irish Peasantry, The Works\
   \ of William Carleton, Volume Three"
 url: http://www.gutenberg.org/ebooks/16016
